@@ -24,6 +24,10 @@ New checkers
 
   Closes #4365
 
+* Added ``forgotten-debug-statement``: Emitted when ``breakpoint``, ``pdb.set_trace`` or ``sys.breakpointhook`` calls are found
+
+  Closes #3692
+
 
 Extensions
 ==========
