@@ -55,6 +55,7 @@ ENV_GETTERS = ("os.getenv",)
 SUBPROCESS_POPEN = "subprocess.Popen"
 SUBPROCESS_RUN = "subprocess.run"
 OPEN_MODULE = "_io"
+DEBUG_BREAKPOINTS = ("builtins.breakpoint", "sys.breakpointhook", "pdb.set_trace")
 
 
 DEPRECATED_MODULES = {
@@ -434,6 +435,12 @@ class StdlibChecker(DeprecatedMixin, BaseChecker):
             "Using the system default implicitly can create problems on other operating systems. "
             "See https://www.python.org/dev/peps/pep-0597/",
         ),
+        "W1515": (
+            "Leaving functions creating breakpoints in production code is not recommended",
+            "forgotten-debug-statement",
+            "Calls to breakpoint(), sys.breakpointhook() and pdb.set_trace() should be removed "
+            "from code that is not actively being debugged.",
+        ),
     }
 
     def __init__(self, linter=None):
@@ -495,6 +502,7 @@ class StdlibChecker(DeprecatedMixin, BaseChecker):
         "subprocess-run-check",
         "deprecated-class",
         "unspecified-encoding",
+        "forgotten-debug-statement",
     )
     def visit_call(self, node):
         """Visit a Call node."""
@@ -531,6 +539,8 @@ class StdlibChecker(DeprecatedMixin, BaseChecker):
                         self._check_env_function(node, inferred)
                     elif name == SUBPROCESS_RUN:
                         self._check_for_check_kw_in_run(node)
+                    elif name in DEBUG_BREAKPOINTS:
+                        self.add_message("forgotten-debug-statement", node=node)
                 self.check_deprecated_method(node, inferred)
         except astroid.InferenceError:
             return
