@@ -48,6 +48,10 @@ Release date: TBA
 
   * Extended ``consider-using-tuple`` check to cover ``in`` comparisons.
 
+* Added ``forgotten-debug-statement``: Emitted when ``breakpoint``, ``pdb.set_trace`` or ``sys.breakpointhook`` calls are found
+
+  Closes #3692
+
 
 What's New in Pylint 2.9.6?
 ===========================
